# integra7-editor

./: .gitmodules  AI7Host.cpp  AI7Host.h  AppTypes.h  CMakeLists.txt  Com.h  CommandPalette.cpp  Helper.h  LICENSE.rtf  LuaBridge.cpp  Midi.cpp  Midi.h  ParameterDef.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  Rendering.cpp  Rendering.h  Settings.cpp  Settings.h  Sidebar.cpp  SysexFileDialog.cpp  SysexIO.cpp  SysexIO.h  imgui.ini  imgui_drawbar.h  imgui_envelope.h  imgui_midi_leds.h  imgui_notifications.h  imgui_step_lfo.h  main.cpp  model_tests.cpp  scratch.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ccpp-linux.yml  ccpp-macos.yml  ccpp-win.yml
assets/: make_atlas.py
assets/blender/: knobs.blend  knobs.blend1
components/: Common.h  FlexContainer.cpp  FlexContainer.h  I7ComboBox.cpp  I7ComboBox.h  I7Host.h  I7Parameter.cpp  I7Parameter.h  I7ParameterBase.h  I7Slider.cpp  I7Slider.h  I7TextInput.cpp  I7TextInput.h  ISysexSender.h  Input.cpp  Input.h  LazyExecuter.cpp  LazyExecuter.h  MixerChannelStrip.cpp  MixerChannelStrip.h  MixerPanel.cpp  MixerPanel.h  PartInfo.h  PatchSelector.cpp  PatchSelector.h  ScratchPanel.cpp  ScratchPanel.h  SearchableCombobox.cpp  SearchableCombobox.h  ToneEditorPanel.cpp  ToneEditorPanel.h
components/toneEditor/: Header.cpp  Header.h  ToneEditorPanel.cpp  ToneEditorPanel.h
components/toneEditor/sna/: Common.cpp  Common.h  Instrument.cpp  Instrument.h  SnaInstrumentSelector.cpp  SnaInstrumentSelector.h  SnaPanel.cpp  SnaPanel.h
integra7/: CategoryName.h  Expansion.h  Integra7.h  Integra7Defs.h  Mod.h  Model.cpp  Model.h  ModelIds.cpp  ModelIds.h  PartType.h  SnAcousticPresets.h  SnaInstr.h
integra7/presets/: CategoryName.h  Integra7.h  SnAcousticPresets.h  SnaInstr.h
lua/: _com.lua  _expansionSection.lua  _integra7.lua  _logik_tests.lua  _mfx.lua  _mfxPcmSSection.lua  _mfxSection.lua  _mixerSection.lua  _model.lua  _partsSection.lua  _patchesData.lua  _patchesSection.lua  _pcmdCommonSection.lua  _pcmdCompEqSection.lua  _pcmdMfxSection.lua  _pcmdPitchSection.lua  _pcmdTabsSection.lua  _pcmsCommonSection.lua  _pcmsCtrlSection.lua  _pcmsLfoSection.lua  _pcmsMtrxCtrlSection.lua  _pcmsOutputSection.lua  _pcmsPitchEnvSection.lua  _pcmsPitchSection.lua  _pcmsPmtSection.lua  _pcmsTabsSection.lua  _pcmsTvaEnvSection.lua  _pcmsTvaSection.lua  _pcmsTvfEnvSection.lua  _pcmsTvfSection.lua  _pcmsWaveSection.lua  _rssSection.lua  _sna.lua  _snaData.lua  _snaSection.lua  _sndCommonSection.lua  _sndCompEqSection.lua  _sndInstSection.lua  _sndMfxSection.lua  _sndTabsSection.lua  (+20 more)
src/: AppTypes.h  CommandPalette.h  LuaBridge.cpp  LuaBridge.h  Midi.cpp  Midi.h  ParameterDef.h  Rendering.cpp  Sidebar.cpp  Sidebar.h  SysexFileDialog.cpp  SysexFileDialog.h  SysexIO.cpp  main.cpp
src/widgets/: imgui_drawbar.h  imgui_knob_image.cpp  imgui_knob_image.h  imgui_notifications.h  imgui_range_slider.h  imgui_vslider_image.h
